SERVER-29988 operationTime returned to mongo shell can not be uninitialized